trying minor edits

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script type="text/javascript">
       var yourVlSpec = {
         $schema: "https://vega.github.io/schema/vega-lite/v5.json",
-        description: "A simple bar chart with embedded data.",
+        description: "A simple bar chart with embedded data THAT'S BEEN EDITED.",
         height: 500,
         width: 500,
         data: {
@@ -53,7 +53,7 @@
             { a: "B", b: 55 },
             { a: "C", b: 43 },
             { a: "D", b: 91 },
-            { a: "E", b: 81 },
+            { a: "E", b: 181 },
             { a: "F", b: 53 },
             { a: "G", b: 19 },
             { a: "H", b: 87 },
