fixing minor error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div id="title">
-      <h1 class="semibold" style="margin-bottom: 0px">Embedding Vega-Lite</h1>
+      <h1 class="semibold" style="margin-bottom: 0px">Embedding Vega-Lite With Twp Graphs</h1>
     </div>
     <div id="name">
       <em>Crafting software recitation 7</em>
@@ -61,7 +61,7 @@
           y: { field: "b", type: "quantitative" },
         },
       };
-      vegaEmbed("#vis", yourVlSpec);
+      vegaEmbed("#vis", yourVl2Spec);
     </script>
 
     <script type="text/javascript">
