--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <div id="title">
-      <h1 class="semibold" style="margin-bottom: 0px">Embedding Vega-Lite With Two Graphs</h1>
+      <h1 class="semibold" style="margin-bottom: 0px">Embedding Vega-Lite With One Graph</h1>
     </div>
     <div id="name">
       <em>Crafting software recitation 7</em>
@@ -59,37 +59,8 @@
         encoding: {
           x: { field: "a", type: "ordinal" },
           y: { field: "b", type: "quantitative" },
-        },
       };
       vegaEmbed("#vis", yourVlSpec2);
-    </script>
-
-    <script type="text/javascript">
-      var yourVlSpec = {
-        $schema: "https://vega.github.io/schema/vega-lite/v5.json",
-        description: "A simple bar chart with embedded data THAT'S BEEN EDITED.",
-        height: 500,
-        width: 500,
-        data: {
-          values: [
-            { a: "A", b: 28 },
-            { a: "B", b: 55 },
-            { a: "C", b: 43 },
-            { a: "D", b: 91 },
-            { a: "E", b: 181 },
-            { a: "F", b: 53 },
-            { a: "G", b: 19 },
-            { a: "H", b: 87 },
-            { a: "I", b: 52 },
-          ],
-        },
-        mark: "bar",
-        encoding: {
-          x: { field: "a", type: "ordinal" },
-          y: { field: "b", type: "quantitative" },
-        },
-      };
-      vegaEmbed("#vis", yourVlSpec);
     </script>
   </body>
 </html>
